Everything in place except cutting off the bottom of the pic in main and the magnifying glass.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!doctype>
 <html>
+
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
   </head>
+
   <body>
+
     <header>
       <!-- <img class="header-background" src="https://scontent.xx.fbcdn.net/t31.0-8/11021355_898653110155763_923150969851337795_o.jpg"> -->
       <img class="round-icon" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTryq7y1v9X78LKTHzEgijy5oZ37T-ND3GGnWcmXP33W0tqmiK__w">
-
     </header>
+    
     <aside>
       <h4 class="upper-case">The Iron Yard &#124; Houston</h4>
       <p>Happenings and updates from The Iron Yard in Houston, TX.</p>
       <label for"search-page" class="upper-case">Search</label>
       <input id="search-page" type="text" name="search-request" placeholder="Search Keywords">
     </aside>
+
+
+    <main>
     <h2>September 22 Starts a New Class of The Iron Yard Houston Students</h2>
     <p>By Brian Dorton, Campus Director at <span class="iron-yard">The Iron Yard</span> Houston</p>
     <img src="https://farm3.staticflickr.com/2941/15105612447_bc50a673f7.jpg">
+    </main>
+
   </body>
+
 </html>
