--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <title>BlogLayout</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
   </head>
